SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/Project_Takeoff_Lines__c.object-meta.xml
<CustomObject>
    <label>Takeoff Line</label>
    <nameField>
        <displayFormat>TOL-{000000}</displayFormat>
        <label>TOL #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoff Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>