SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category (LU)</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Takeoff Lines</relationshipLabel>
    <relationshipName>Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>