SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category (PL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electrical Finish</fullName>
            </value>
            <value>
                <fullName>Electrical Rough</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Plumbing Rough</fullName>
            </value>
            <value>
                <fullName>Pluming Finish</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>