SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Edge__c.field-meta.xml
<CustomField>
    <fullName>Edge__c</fullName>
    <label>Edge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eased</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>