SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Handedness__c.field-meta.xml
<CustomField>
    <fullName>Handedness__c</fullName>
    <label>Handedness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>