SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/IsBOMLines__c.field-meta.xml
<CustomField>
    <fullName>IsBOMLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBOMLines</label>
    <type>Checkbox</type>
</CustomField>