SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>