SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Linear_Edge__c.field-meta.xml
<CustomField>
    <fullName>Linear_Edge__c</fullName>
    <formula>Length__c +  Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linear Edge (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>