SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Linear_Feet__c.field-meta.xml
<CustomField>
    <fullName>Linear_Feet__c</fullName>
    <formula>Linear_Edge__c/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linear Feet (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>