SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bathroom 2</fullName>
            </value>
            <value>
                <fullName>Bathroom 3</fullName>
            </value>
            <value>
                <fullName>Bedroom 2</fullName>
            </value>
            <value>
                <fullName>Bedroom 3</fullName>
            </value>
            <value>
                <fullName>DRYER &amp; RANGE VENT</fullName>
            </value>
            <value>
                <fullName>DUCT SYSTEM</fullName>
            </value>
            <value>
                <fullName>Exterior Gas Stub</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>FURNACE (BTU)</fullName>
            </value>
            <value>
                <fullName>GAS LINES</fullName>
            </value>
            <value>
                <fullName>H2O B-VENT</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>LAUNDRY &amp; BATH FANS</fullName>
            </value>
            <value>
                <fullName>Master Bathroom</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Powder Room</fullName>
            </value>
            <value>
                <fullName>THERMOSTAT</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Common Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>