SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Type</label>
    <referenceTo>Plans__c</referenceTo>
    <relationshipName>Project_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>