SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Takeoff Lines</relationshipLabel>
    <relationshipName>Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>