SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>