SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Product_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <label>Product Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Jumbo</fullName>
            </value>
            <value>
                <fullName>Half Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>