SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>Product_Type__c</referenceTo>
    <relationshipLabel>Takeoff Lines</relationshipLabel>
    <relationshipName>Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>