SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Project_Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Project_Takeoff__c</fullName>
    <label>Project Takeoff</label>
    <referenceTo>Project_Takeoff__c</referenceTo>
    <relationshipName>Project_Takeoff_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>