SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <label>Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/16&quot; = 1&apos;</fullName>
            </value>
            <value>
                <fullName>1&quot; - 30&apos;</fullName>
            </value>
            <value>
                <fullName>1/8&quot; - 1&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>