SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/SKUforBOMline__c.field-meta.xml
<CustomField>
    <fullName>SKUforBOMline__c</fullName>
    <label>SKUforBOMline</label>
    <length>180</length>
    <type>Text</type>
</CustomField>