SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Slab_SQFT_2__c.field-meta.xml
<CustomField>
    <fullName>Slab_SQFT_2__c</fullName>
    <label>Slab SQFT 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>