SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Master Takeoff Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>