SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/SQFT_LH__c.field-meta.xml
<CustomField>
    <fullName>SQFT_LH__c</fullName>
    <formula>( Height__c *  Length__c )/144</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQFT (L-H)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>