SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/SQFT_LW__c.field-meta.xml
<CustomField>
    <fullName>SQFT_LW__c</fullName>
    <formula>(Length__c *  Width__c )/144</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQFT (L-W)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>