SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>