SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>Product SKU</label>
    <length>128</length>
    <type>Text</type>
</CustomField>