SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TL_QUANTITY_2__c.field-meta.xml
<CustomField>
    <fullName>TL_QUANTITY_2__c</fullName>
    <label>Quantity 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>