SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TL_SERVICE_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>TL_SERVICE_CATEGORY__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fab</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Work Comp</fullName>
            </value>
            <value>
                <fullName>Slab - Quartz</fullName>
            </value>
            <value>
                <fullName>Slab - Granite</fullName>
            </value>
            <value>
                <fullName>Slab - Porcelain</fullName>
            </value>
            <value>
                <fullName>Misc Non-Tax</fullName>
            </value>
            <value>
                <fullName>Misc Taxable</fullName>
            </value>
            <value>
                <fullName>Textura</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Ins</fullName>
            </value>
            <value>
                <fullName>OCIP</fullName>
            </value>
            <value>
                <fullName>Fab &amp; Install</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>