SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_AREA_REF__c.field-meta.xml
<CustomField>
    <fullName>TO_AREA_REF__c</fullName>
    <label>Area Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>