SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_BUILD_REF1__c.field-meta.xml
<CustomField>
    <fullName>TO_BUILD_REF1__c</fullName>
    <label>Build Reference 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>