SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_DATE__c.field-meta.xml
<CustomField>
    <fullName>TO_DATE__c</fullName>
    <inlineHelpText>Date the TakeOff Line was created.</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>