SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_INSTALL_LOC__c.field-meta.xml
<CustomField>
    <fullName>TO_INSTALL_LOC__c</fullName>
    <label>Install Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>