SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_LAST_EST_DATE__c.field-meta.xml
<CustomField>
    <fullName>TO_LAST_EST_DATE__c</fullName>
    <label>Last Estimate Date</label>
    <type>Date</type>
</CustomField>