SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_LINEAR_EDGE__c.field-meta.xml
<CustomField>
    <fullName>TO_LINEAR_EDGE__c</fullName>
    <label>Linear Edge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>