SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_LINEAR_FEET__c.field-meta.xml
<CustomField>
    <fullName>TO_LINEAR_FEET__c</fullName>
    <label>Linear Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>