SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_LOCATION_DETAIL_REF__c.field-meta.xml
<CustomField>
    <fullName>TO_LOCATION_DETAIL_REF__c</fullName>
    <label>Location Detail Reference 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>