SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_MATERIAL_Value__c.field-meta.xml
<CustomField>
    <fullName>TO_MATERIAL_Value__c</fullName>
    <label>Material Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>