SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_OTHER_CUT_OUT__c.field-meta.xml
<CustomField>
    <fullName>TO_OTHER_CUT_OUT__c</fullName>
    <label>Other Cut Outs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>