SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_REC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TO_REC_TYPE__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>