SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SLAB_SF__c.field-meta.xml
<CustomField>
    <fullName>TO_SLAB_SF__c</fullName>
    <label>Slab SQF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>