SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SQFT_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>TO_SQFT_TOTAL__c</fullName>
    <label>SQFT Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>