SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>TO_SR_NO__c</fullName>
    <label>Series Number</label>
    <type>TextArea</type>
</CustomField>