SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SR_NO_SUB__c.field-meta.xml
<CustomField>
    <fullName>TO_SR_NO_SUB__c</fullName>
    <label>Sub-Series Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>