SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SUB_ITEM__c.field-meta.xml
<CustomField>
    <fullName>TO_SUB_ITEM__c</fullName>
    <label>Sub-Series Item</label>
    <length>250</length>
    <type>Text</type>
</CustomField>