SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_SUMMARY_VALUE__c.field-meta.xml
<CustomField>
    <fullName>TO_SUMMARY_VALUE__c</fullName>
    <label>Summary Value 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>