SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_TOP_SQFT__c.field-meta.xml
<CustomField>
    <fullName>TO_TOP_SQFT__c</fullName>
    <label>Top SQFT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>