SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_UNIT_COUNT__c.field-meta.xml
<CustomField>
    <fullName>TO_UNIT_COUNT__c</fullName>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>