SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_VERSION__c.field-meta.xml
<CustomField>
    <fullName>TO_VERSION__c</fullName>
    <label>Version</label>
    <length>250</length>
    <type>Text</type>
</CustomField>