SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/TO_YIELD__c.field-meta.xml
<CustomField>
    <fullName>TO_YIELD__c</fullName>
    <formula>TO_TOP_SQFT__c/TO_SLAB_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>