SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipName>Project_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>