SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>125</length>
    <type>Text</type>
</CustomField>