SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/UOM_PL__c.field-meta.xml
<CustomField>
    <fullName>UOM_PL__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>Centimeters</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>