SubBt/force-app/main/default/objects/Project_Takeoff_Lines__c/fields/Waste__c.field-meta.xml
<CustomField>
    <fullName>Waste__c</fullName>
    <formula>1- TO_YIELD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>